[project]
name = "monero"
version = "0.0.1"
description = "Python bindings for monero-cpp"
authors = [
    { name = "everoddandeven", email = "everoddandeven@protonmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.12"
]

[build-system]
requires = [
    "scikit-build-core>=0.5",
    "pybind11>=2.12",
    "cmake>=3.20",
    "ninja"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
cmake.build-type = "Release"
